templates/service-c.yaml
apiVersion: v1
kind: Service
metadata:
  name: http2-service
spec:
  selector:
    app: http2-backend
  ports:
    - name: http-port
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: http2-port
      protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http2-backend
  template:
    metadata:
      labels:
        app: http2-backend
        version: latest
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: service-c
      containers:
      - name: nodejs-http2
        image: mrjonleek/nodejs-http2:v1
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: service-c-secret
          mountPath: "/usr/src/app/certs"
          readOnly: true
      volumes:
      - name: service-c-secret
        secret:
          secretName: service-c-secret
